# airflow-provider-hightouch

./: CHANGELOG.md  Makefile  pyproject.toml  setup.cfg
.circleci/: config.yml
.github/workflows/: outrider-daily.yml  outrider.yml
airflow_provider_hightouch/: __init__.py  version.py
airflow_provider_hightouch/example_dags/: example_hightouch_trigger_sync.py
airflow_provider_hightouch/hooks/: hightouch.py
airflow_provider_hightouch/operators/: hightouch.py
airflow_provider_hightouch/sensors/: hightouch.py
tests/hooks/: test_hightouch_hook.py
tests/sensors/: test_hightouch_sensor.py
